@@ -28,12 +28,14 @@
 
 package org.opennms.netmgt.importer.operations;
 
+import static org.opennms.core.utils.InetAddressUtils.addr;
+import static org.opennms.core.utils.InetAddressUtils.str;
+
 import java.net.InetAddress;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.opennms.core.utils.InetAddressUtils;
 import org.opennms.netmgt.capsd.IfSnmpCollector;
 import org.opennms.netmgt.capsd.snmp.IfTableEntry;
 import org.opennms.netmgt.dao.api.CategoryDao;
@@ -45,11 +47,11 @@ import org.opennms.netmgt.model.OnmsCategory;
 import org.opennms.netmgt.model.OnmsIpInterface;
 import org.opennms.netmgt.model.OnmsMonitoredService;
 import org.opennms.netmgt.model.OnmsNode;
+import org.opennms.netmgt.model.OnmsNode.NodeLabelSource;
+import org.opennms.netmgt.model.OnmsNode.NodeType;
 import org.opennms.netmgt.model.OnmsServiceType;
 import org.opennms.netmgt.model.OnmsSnmpInterface;
 import org.opennms.netmgt.model.PrimaryType;
-import org.opennms.netmgt.model.OnmsNode.NodeLabelSource;
-import org.opennms.netmgt.model.OnmsNode.NodeType;
 import org.opennms.netmgt.xml.event.Event;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -64,11 +66,11 @@ import org.springframework.beans.PropertyAccessorFactory;
  * @version $Id: $
  */
 public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperation implements SaveOrUpdateOperation {
-	
-	private static final Logger LOG = LoggerFactory.getLogger(AbstractSaveOrUpdateOperation.class);
+
+    private static final Logger LOG = LoggerFactory.getLogger(AbstractSaveOrUpdateOperation.class);
 
 
-	private final OnmsNode m_node;
+    private final OnmsNode m_node;
     private NodeDao m_nodeDao;
     private DistPollerDao m_distPollerDao;
     private OnmsIpInterface m_currentInterface;
@@ -76,7 +78,7 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
     private CategoryDao m_categoryDao;
     private ThreadLocal<HashMap<String, OnmsServiceType>> m_types;
     private ThreadLocal<HashMap<String, OnmsCategory>> m_categories;
-    
+
     private IfSnmpCollector m_collector;
 
     /**
@@ -89,77 +91,77 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
      * @param city a {@link java.lang.String} object.
      */
     public AbstractSaveOrUpdateOperation(final String foreignSource, final String foreignId, final String nodeLabel, final String building, final String city) {
-		this(null, foreignSource, foreignId, nodeLabel, building, city);
-	}
+        this(null, foreignSource, foreignId, nodeLabel, building, city);
+    }
 
-	/**
-	 * <p>Constructor for AbstractSaveOrUpdateOperation.</p>
-	 *
-	 * @param nodeId a {@link java.lang.Integer} object.
-	 * @param foreignSource a {@link java.lang.String} object.
-	 * @param foreignId a {@link java.lang.String} object.
-	 * @param nodeLabel a {@link java.lang.String} object.
-	 * @param building a {@link java.lang.String} object.
-	 * @param city a {@link java.lang.String} object.
-	 */
-	public AbstractSaveOrUpdateOperation(final Integer nodeId, final String foreignSource, final String foreignId, final String nodeLabel, final String building, final String city) {
+    /**
+     * <p>Constructor for AbstractSaveOrUpdateOperation.</p>
+     *
+     * @param nodeId a {@link java.lang.Integer} object.
+     * @param foreignSource a {@link java.lang.String} object.
+     * @param foreignId a {@link java.lang.String} object.
+     * @param nodeLabel a {@link java.lang.String} object.
+     * @param building a {@link java.lang.String} object.
+     * @param city a {@link java.lang.String} object.
+     */
+    public AbstractSaveOrUpdateOperation(final Integer nodeId, final String foreignSource, final String foreignId, final String nodeLabel, final String building, final String city) {
         m_node = new OnmsNode();
         m_node.setId(nodeId);
-		m_node.setLabel(nodeLabel);
-		m_node.setLabelSource(NodeLabelSource.USER);
-		m_node.setType(NodeType.ACTIVE);
+        m_node.setLabel(nodeLabel);
+        m_node.setLabelSource(NodeLabelSource.USER);
+        m_node.setType(NodeType.ACTIVE);
         m_node.setForeignSource(foreignSource);
         m_node.setForeignId(foreignId);
         m_node.getAssetRecord().setBuilding(building);
-        m_node.getAssetRecord().setCity(city);
-	}
+        m_node.getAssetRecord().getGeolocation().setCity(city);
+    }
 
-	/** {@inheritDoc} */
-        @Override
-	public void foundInterface(final String ipAddr, final Object descr, final InterfaceSnmpPrimaryType snmpPrimary, final boolean managed, final int status) {
-		
-		if ("".equals(ipAddr)) {
-			LOG.error("Found interface on node {} with an empty ipaddr! Ignoring!", m_node.getLabel());
-			// create a bogus OnmsIpInterface and set it to current to services we run across get ignored as well
-			m_currentInterface = new OnmsIpInterface();
-			return;
-		}
+    /** {@inheritDoc} */
+    @Override
+    public void foundInterface(final String ipAddr, final Object descr, final InterfaceSnmpPrimaryType snmpPrimary, final boolean managed, final int status) {
 
-        m_currentInterface = new OnmsIpInterface(ipAddr, m_node);
+        if ("".equals(ipAddr)) {
+            LOG.error("Found interface on node {} with an empty ipaddr! Ignoring!", m_node.getLabel());
+            // create a bogus OnmsIpInterface and set it to current to services we run across get ignored as well
+            m_currentInterface = new OnmsIpInterface();
+            return;
+        }
+
+        final InetAddress addr = addr(ipAddr);
+
+        m_currentInterface = new OnmsIpInterface(addr, m_node);
         m_currentInterface.setIsManaged(status == 3 ? "U" : "M");
         m_currentInterface.setIsSnmpPrimary(PrimaryType.get(snmpPrimary.toString()));
-        //m_currentInterface.setIpStatus(status == 3 ? new Integer(3) : new Integer(1));
-        
+
         if (InterfaceSnmpPrimaryType.P.equals(snmpPrimary)) {
-        	final InetAddress addr = InetAddressUtils.addr(ipAddr);
-        	if (addr == null) {
-        		LOG.error("Unable to resolve address of snmpPrimary interface for node {}", m_node.getLabel());
-        	}
-    		m_collector = new IfSnmpCollector(addr);
+            if (addr == null) {
+                LOG.error("Unable to resolve address of snmpPrimary interface for node {}", m_node.getLabel());
+            }
+            m_collector = new IfSnmpCollector(addr);
         }
-        
+
         //FIXME: verify this doesn't conflict with constructor.  The constructor already adds this
         //interface to the node.
         m_node.addIpInterface(m_currentInterface);
     }
-	
-	/**
-	 * <p>gatherAdditionalData</p>
-	 */
-        @Override
-	public void gatherAdditionalData() {
-    	updateSnmpData();
-	}
-	
+
+    /**
+     * <p>gatherAdditionalData</p>
+     */
+    @Override
+    public void gatherAdditionalData() {
+        updateSnmpData();
+    }
+
     /**
      * <p>persist</p>
      *
      * @return a {@link java.util.List} object.
      */
-        @Override
+    @Override
     public List<Event> persist() {
-    	return doPersist();
-	}
+        return doPersist();
+    }
 
     /**
      * <p>doPersist</p>
@@ -168,101 +170,101 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
      */
     protected abstract List<Event> doPersist();
 
-	/**
-	 * <p>updateSnmpData</p>
-	 */
-	protected void updateSnmpData() {
-		if (m_collector != null) {
+    /**
+     * <p>updateSnmpData</p>
+     */
+    protected void updateSnmpData() {
+        if (m_collector != null) {
             m_collector.run();
         }
-		
-		updateSnmpDataForNode();
-		
-		updateSnmpDataForSnmpInterfaces();
-		
-		for (OnmsIpInterface ipIf : m_node.getIpInterfaces()) {
+
+        updateSnmpDataForNode();
+
+        updateSnmpDataForSnmpInterfaces();
+
+        for (final OnmsIpInterface ipIf : m_node.getIpInterfaces()) {
             resolveIpHostname(ipIf);
             updateSnmpDataForInterface(ipIf);
-		}
-	}
-	
-	private void updateSnmpDataForSnmpInterfaces() {
-	    if (m_collector != null && m_collector.hasIfTable()) {
+        }
+    }
 
-            for(IfTableEntry entry : m_collector.getIfTable()) {
-	            
-	            Integer ifIndex = entry.getIfIndex();
-	            
-	            if (ifIndex == null) continue;
-	            
+    private void updateSnmpDataForSnmpInterfaces() {
+        if (m_collector != null && m_collector.hasIfTable()) {
+
+            for(final IfTableEntry entry : m_collector.getIfTable()) {
+                final Integer ifIndex = entry.getIfIndex();
+                if (ifIndex == null) {
+                    continue;
+                }
+
                 LOG.debug("Updating SNMP Interface with ifIndex {}", ifIndex);
-                
-	            // first look to see if an snmpIf was created already
-	            OnmsSnmpInterface snmpIf = m_node.getSnmpInterfaceWithIfIndex(ifIndex);
-	            
-	            if (snmpIf == null) {
-	                // if not then create one
-                    snmpIf = new OnmsSnmpInterface(m_node, ifIndex);
-	            }
-	            
-	            snmpIf.setIfAlias(m_collector.getIfAlias(ifIndex));
-	            snmpIf.setIfName(m_collector.getIfName(ifIndex));
-	            snmpIf.setIfType(getIfType(ifIndex));
-	            snmpIf.setNetMask(getNetMask(ifIndex));
-	            snmpIf.setIfAdminStatus(getAdminStatus(ifIndex));
-	            snmpIf.setIfDescr(m_collector.getIfDescr(ifIndex));
-	            snmpIf.setIfSpeed(m_collector.getInterfaceSpeed(ifIndex));
-	            snmpIf.setPhysAddr(m_collector.getPhysAddr(ifIndex));
-	            
-	        }
-	    }
-	}
 
-	private void updateSnmpDataForNode() {
+                // first look to see if an snmpIf was created already
+                OnmsSnmpInterface snmpIf = m_node.getSnmpInterfaceWithIfIndex(ifIndex);
+
+                if (snmpIf == null) {
+                    // if not then create one
+                    snmpIf = new OnmsSnmpInterface(m_node, ifIndex);
+                }
+
+                snmpIf.setIfAlias(m_collector.getIfAlias(ifIndex));
+                snmpIf.setIfName(m_collector.getIfName(ifIndex));
+                snmpIf.setIfType(getIfType(ifIndex));
+                snmpIf.setNetMask(getNetMask(ifIndex));
+                snmpIf.setIfAdminStatus(getAdminStatus(ifIndex));
+                snmpIf.setIfDescr(m_collector.getIfDescr(ifIndex));
+                snmpIf.setIfSpeed(m_collector.getInterfaceSpeed(ifIndex));
+                snmpIf.setPhysAddr(m_collector.getPhysAddr(ifIndex));
+
+            }
+        }
+    }
+
+    private void updateSnmpDataForNode() {
         if (m_collector != null && m_collector.hasSystemGroup()) {
             m_node.setSysContact(m_collector.getSystemGroup().getSysContact());
             m_node.setSysDescription(m_collector.getSystemGroup().getSysDescr());
             m_node.setSysLocation(m_collector.getSystemGroup().getSysLocation());
             m_node.setSysObjectId(m_collector.getSystemGroup().getSysObjectID());
         }
-	}
-	
-	/**
-	 * <p>isSnmpDataForNodeUpToDate</p>
-	 *
-	 * @return a boolean.
-	 */
-	protected boolean isSnmpDataForNodeUpToDate() {
-		return m_collector != null && m_collector.hasSystemGroup();
-	}
-	
-	/**
-	 * <p>isSnmpDataForInterfacesUpToDate</p>
-	 *
-	 * @return a boolean.
-	 */
-	protected boolean isSnmpDataForInterfacesUpToDate() {
-		return m_collector != null && m_collector.hasIfTable() && m_collector.hasIpAddrTable();
-	}
+    }
 
-    private void updateSnmpDataForInterface(OnmsIpInterface ipIf) {
-    	if (m_collector == null || !m_collector.hasIpAddrTable() || !m_collector.hasIfTable()) {
+    /**
+     * <p>isSnmpDataForNodeUpToDate</p>
+     *
+     * @return a boolean.
+     */
+    protected boolean isSnmpDataForNodeUpToDate() {
+        return m_collector != null && m_collector.hasSystemGroup();
+    }
+
+    /**
+     * <p>isSnmpDataForInterfacesUpToDate</p>
+     *
+     * @return a boolean.
+     */
+    protected boolean isSnmpDataForInterfacesUpToDate() {
+        return m_collector != null && m_collector.hasIfTable() && m_collector.hasIpAddrTable();
+    }
+
+    private void updateSnmpDataForInterface(final OnmsIpInterface ipIf) {
+        if (m_collector == null || !m_collector.hasIpAddrTable() || !m_collector.hasIfTable()) {
             return;
         }
 
-    	final InetAddress inetAddr = ipIf.getIpAddress();
-    	final String ipAddr = InetAddressUtils.str(inetAddr);
+        final InetAddress inetAddr = ipIf.getIpAddress();
+        final String ipAddr = str(inetAddr);
 
-    	LOG.debug("Creating SNMP info for interface {}", ipAddr);
+        LOG.debug("Creating SNMP info for interface {}", ipAddr);
 
-    	int ifIndex = m_collector.getIfIndex(inetAddr);
-    	if (ifIndex == -1) {
+        final int ifIndex = m_collector.getIfIndex(inetAddr);
+        if (ifIndex == -1) {
             return;
         }
 
         // first look to see if an snmpIf was created already
         OnmsSnmpInterface snmpIf = m_node.getSnmpInterfaceWithIfIndex(ifIndex);
-        
+
         if (snmpIf == null) {
             // if not then create one
             snmpIf = new OnmsSnmpInterface(m_node, ifIndex);
@@ -275,108 +277,95 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
             snmpIf.setIfSpeed(m_collector.getInterfaceSpeed(ifIndex));
             snmpIf.setPhysAddr(m_collector.getPhysAddr(ifIndex));
         }
-        
+
         snmpIf.setCollectionEnabled(true);
 
         ipIf.setSnmpInterface(snmpIf);
 
-    	//FIXME: Improve OpenNMS to provide these values
-    	// ifOperStatus
+        //FIXME: Improve OpenNMS to provide these values
+        // ifOperStatus
 
-	}
+    }
 
-	private Integer getAdminStatus(int ifIndex) {
-		int adminStatus = m_collector.getAdminStatus(ifIndex);
-		return (adminStatus == -1 ? null : new Integer(adminStatus));
-	}
+    private Integer getAdminStatus(final int ifIndex) {
+        final int adminStatus = m_collector.getAdminStatus(ifIndex);
+        return (adminStatus == -1 ? null : Integer.valueOf(adminStatus));
+    }
 
-	private Integer getIfType(int ifIndex) {
-		int ifType = m_collector.getIfType(ifIndex);
-		return (ifType == -1 ? null : new Integer(ifType));
-	}
+    private Integer getIfType(final int ifIndex) {
+        final int ifType = m_collector.getIfType(ifIndex);
+        return (ifType == -1 ? null : Integer.valueOf(ifType));
+    }
 
-	private InetAddress getNetMask(int ifIndex) {
-		InetAddress[] ifAddressAndMask = m_collector.getIfAddressAndMask(ifIndex);
-		if (ifAddressAndMask != null && ifAddressAndMask.length > 1 && ifAddressAndMask[1] != null) {
+    private InetAddress getNetMask(final int ifIndex) {
+        final InetAddress[] ifAddressAndMask = m_collector.getIfAddressAndMask(ifIndex);
+        if (ifAddressAndMask != null && ifAddressAndMask.length > 1 && ifAddressAndMask[1] != null) {
             return ifAddressAndMask[1];
         }
-		return null;
-	}
+        return null;
+    }
 
-	private void resolveIpHostname(final OnmsIpInterface ipIf) {
-		final String ipAddress = InetAddressUtils.str(ipIf.getIpAddress());
-		ipIf.setIpHostName(ipAddress);
-//
-//     DON'T DO THIS SINCE DNS DOESN'T RELIABLY AVOID HANGING
-//
-//    	log().info("Resolving Hostname for "+ipIf.getIpAddress());
-//		try {
-//			InetAddress addr = InetAddressUtils.addr(ipIf.getIpAddress());
-//			ipIf.setIpHostName(addr.getHostName());
-//		} catch (Throwable e) {
-//			if (ipIf.getIpHostName() == null)
-//				ipIf.setIpHostName(ipIf.getIpAddress());
-//		}
-	}
+    private void resolveIpHostname(final OnmsIpInterface ipIf) {
+        final String ipAddress = str(ipIf.getIpAddress());
+        ipIf.setIpHostName(ipAddress);
+    }
 
-	/** {@inheritDoc} */
-        @Override
-	public void foundMonitoredService(String serviceName) {
-        OnmsServiceType svcType = getServiceType(serviceName);
-        OnmsMonitoredService service = new OnmsMonitoredService(m_currentInterface, svcType);
+    /** {@inheritDoc} */
+    @Override
+    public void foundMonitoredService(final String serviceName) {
+        final OnmsServiceType svcType = getServiceType(serviceName);
+        final OnmsMonitoredService service = new OnmsMonitoredService(m_currentInterface, svcType);
         service.setStatus("A");
         m_currentInterface.getMonitoredServices().add(service);
-    
+
     }
 
     /** {@inheritDoc} */
-        @Override
-    public void foundCategory(String name) {
-        OnmsCategory category = getCategory(name);
-        m_node.getCategories().add(category);
+    @Override
+    public void foundCategory(final String name) {
+        m_node.getCategories().add(getCategory(name));
     }
 
     /** {@inheritDoc} */
-        @Override
-    public void foundAsset(String name, String value) {
-        BeanWrapper w = PropertyAccessorFactory.forBeanPropertyAccess(m_node.getAssetRecord());
+    @Override
+    public void foundAsset(final String name, final String value) {
+        final BeanWrapper w = PropertyAccessorFactory.forBeanPropertyAccess(m_node.getAssetRecord());
         try {
             w.setPropertyValue(name, value);
-        } catch (BeansException e) {
+        } catch (final BeansException e) {
             LOG.warn("Could not set property on asset: {}", name, e);
         }
     }
-    
-    private OnmsServiceType getServiceType(String serviceName) {
+
+    private OnmsServiceType getServiceType(final String serviceName) {
         preloadExistingTypes();
         OnmsServiceType type = getTypes().get(serviceName);
         if (type == null) {
             type = m_svcTypeDao.findByName(serviceName);
-            
+
             if (type == null) {
                 type = new OnmsServiceType(serviceName);
                 m_svcTypeDao.save(type);
             }
-            
+
             getTypes().put(serviceName, type);
         }
         return type;
     }
-    
+
     private void preloadExistingTypes() {
-        
         if (getTypes() == null) {
             setTypes(new HashMap<String, OnmsServiceType>());
-            for (OnmsServiceType svcType : m_svcTypeDao.findAll()) {
+            for (final OnmsServiceType svcType : m_svcTypeDao.findAll()) {
                 getTypes().put(svcType.getName(), svcType);
             }
         }
     }
-    
+
     private void preloadExistingCategories() {
         if (getCategories() == null) {
             setCategories(new HashMap<String, OnmsCategory>());
-            for (OnmsCategory category : m_categoryDao.findAll()) {
+            for (final OnmsCategory category : m_categoryDao.findAll()) {
                 getCategories().put(category.getName(), category);
             }
         }
@@ -390,7 +379,7 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
     protected OnmsNode getNode() {
         return m_node;
     }
-    
+
     /**
      * <p>getNodeDao</p>
      *
@@ -399,7 +388,7 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
     protected NodeDao getNodeDao() {
         return m_nodeDao;
     }
-    
+
     /**
      * <p>getDistPollerDao</p>
      *
@@ -409,9 +398,9 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
         return m_distPollerDao;
     }
 
-    private OnmsCategory getCategory(String name) {
+    private OnmsCategory getCategory(final String name) {
         preloadExistingCategories();
-        
+
         OnmsCategory category = getCategories().get(name);
         if (category == null) {    
             category = m_categoryDao.findByName(name);
@@ -431,11 +420,11 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
      * @param imported a {@link org.opennms.netmgt.model.OnmsNode} object.
      * @return a {@link java.util.Map} object.
      */
-    protected Map<String, OnmsIpInterface> getIpAddrToInterfaceMap(OnmsNode imported) {
-        Map<String, OnmsIpInterface> ipAddrToIface = new HashMap<String, OnmsIpInterface>();
+    protected Map<String, OnmsIpInterface> getIpAddrToInterfaceMap(final OnmsNode imported) {
+        final Map<String, OnmsIpInterface> ipAddrToIface = new HashMap<String, OnmsIpInterface>();
         for (final OnmsIpInterface iface : imported.getIpInterfaces()) {
-            final String ipAddress = InetAddressUtils.str(iface.getIpAddress());
-			ipAddrToIface.put(ipAddress, iface);
+            final String ipAddress = str(iface.getIpAddress());
+            ipAddrToIface.put(ipAddress, iface);
         }
         return ipAddrToIface;
     }
@@ -444,11 +433,11 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
         return m_types.get();
     }
 
-    private void setTypes(HashMap<String, OnmsServiceType> types) {
+    private void setTypes(final HashMap<String, OnmsServiceType> types) {
         m_types.set(types);
     }
 
-    private void setCategories(HashMap<String, OnmsCategory> categories) {
+    private void setCategories(final HashMap<String, OnmsCategory> categories) {
         m_categories.set(categories);
     }
 
@@ -470,7 +459,7 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
      *
      * @param categoryDao a {@link org.opennms.netmgt.dao.api.CategoryDao} object.
      */
-    public void setCategoryDao(CategoryDao categoryDao) {
+    public void setCategoryDao(final CategoryDao categoryDao) {
         m_categoryDao = categoryDao;
     }
 
@@ -479,7 +468,7 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
      *
      * @param svcTypeDao a {@link org.opennms.netmgt.dao.api.ServiceTypeDao} object.
      */
-    public void setServiceTypeDao(ServiceTypeDao svcTypeDao) {
+    public void setServiceTypeDao(final ServiceTypeDao svcTypeDao) {
         m_svcTypeDao = svcTypeDao;
     }
 
@@ -488,7 +477,7 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
      *
      * @param nodeDao a {@link org.opennms.netmgt.dao.api.NodeDao} object.
      */
-    public void setNodeDao(NodeDao nodeDao) {
+    public void setNodeDao(final NodeDao nodeDao) {
         m_nodeDao = nodeDao;
     }
 
@@ -497,37 +486,37 @@ public abstract class AbstractSaveOrUpdateOperation extends AbstractImportOperat
      *
      * @param distPollerDao a {@link org.opennms.netmgt.dao.api.DistPollerDao} object.
      */
-    public void setDistPollerDao(DistPollerDao distPollerDao) {
+    public void setDistPollerDao(final DistPollerDao distPollerDao) {
         m_distPollerDao = distPollerDao;
     }
-    
+
     /**
      * <p>setTypeCache</p>
      *
      * @param typeCache a {@link java.lang.ThreadLocal} object.
      */
-    public void setTypeCache(ThreadLocal<HashMap<String, OnmsServiceType>> typeCache) {
+    public void setTypeCache(final ThreadLocal<HashMap<String, OnmsServiceType>> typeCache) {
         m_types = typeCache;
     }
-    
+
     /**
      * <p>setCategoryCache</p>
      *
      * @param categoryCache a {@link java.lang.ThreadLocal} object.
      */
-    public void setCategoryCache(ThreadLocal<HashMap<String, OnmsCategory>> categoryCache) {
+    public void setCategoryCache(final ThreadLocal<HashMap<String, OnmsCategory>> categoryCache) {
         m_categories = categoryCache;
     }
 
-	/**
-	 * <p>nullSafeEquals</p>
-	 *
-	 * @param o1 a {@link java.lang.Object} object.
-	 * @param o2 a {@link java.lang.Object} object.
-	 * @return a boolean.
-	 */
-	public boolean nullSafeEquals(Object o1, Object o2) {
-	    return (o1 == null ? o2 == null : o1.equals(o2));
-	}
+    /**
+     * <p>nullSafeEquals</p>
+     *
+     * @param o1 a {@link java.lang.Object} object.
+     * @param o2 a {@link java.lang.Object} object.
+     * @return a boolean.
+     */
+    public boolean nullSafeEquals(final Object o1, final Object o2) {
+        return (o1 == null ? o2 == null : o1.equals(o2));
+    }
 
 }
